json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,251 @@
 {
  "items": [
   {
+    "id": "hPCE1aSTQOmRTdgPhlku_w",
+    "url": "http://jobmote.com/jobs/26378-iam-consultant-remote-working",
+    "title": "IAM Consultant - Remote working",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Modis",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 28, 2018 1:20:27 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Fantastic opportunity to join a growing Global IAM practice.</p><p>Work/Life balance is a massive deal for them and so this position offers very <strong>flexible home working</strong> options (around <strong>70% from home</strong> ) as well as very competitive basic salaries, <strong>benefits &amp; a bonus</strong>.</p><p>They are interested in speaking to anyone with Identity &amp; Access Management experience in any of the following IAM tools: Ping identity, One identity, IBM, Oracle, Dell, CyberArk, Sailpoint, RSA, Forgerock.</p><p>They are based in Bedfordshire and only occasionally they would require you to come into the office, but this is mainly a client facing and home working role.</p><p>Apply now if you would like to hear more.</p><p>Immediate Starts available and preferred!</p><p>Modis International Ltd acts as an employment agency for permanent recruitment and an employment business for the supply of temporary workers. Modis International Ltd UK is an Equal Opportunities Employer.</p><p>By applying for this role your details will be submitted to Modis. Our Candidate Privacy Information Statement explains how we will use your information - please copy and paste the following link in to your browser:</p><p></p></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "exdRbmdxSW2L3OZmZuiKAw",
+    "url": "http://jobmote.com/jobs/26309-remote-kronos-workforce-ready-saas-hr-consultant",
+    "title": "REMOTE Kronos WorkForce Ready / SaaS HR Consultant",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Rockcrest Technology Search, Inc.",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 28, 2018 7:21:17 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><ul><li>Urgent need for an experienced Kronos Consultant to work on a long term project migrating a home grown legacy T&amp;A system to Kronos SaaS HR</li><li>Configuring / troubleshooting Kronos WorkForce Ready. </li><li>Technical and Functional skills required, as well as good business skills and interpersonal skills.</li><li>Large scale project, ongoing support and migration work.</li><li>12+ months</li><li>Rate negotiable</li><li>100% remote<ul><li>provided by Dice Kronos WorkForce Ready Consultants Saas HR </li></ul></li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "qALl1qGqS-SouRxvRc-Umg",
+    "url": "https://angel.co/incloudcounsel/jobs/32238-corporate-attorney-remote",
+    "title": "Corporate Attorney - Remote",
+    "tags": [
+      "Attorney",
+      "Client Relations/Contract Management",
+      "Contract Negotiations",
+      "Contract Review and Negotiation",
+      "DBG:surround``fulltim 4N remot",
+      "Full Time",
+      "Legal Contracts",
+      "Mergers & Acquisitions",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Francisco",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "InCloudCounsel",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 50000,
+      "maxValue": 130000,
+      "info": "No equity",
+      "unit": "YEAR",
+      "parser": "SalaryParserDefaultImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2018 11:40:10 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>Corporate Attorney - Remote  at InCloudCounsel</h2><div>San Francisco, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Legal Contracts, Contract Negotiations, Mergers &amp; Acquisitions, Contract Review and Negotiation, Client Relations/Contract Management</div><div>Compensation</div><div>$50k – $130k<br>No equity</div></div><h3>Job Description</h3><div><p>Are you an attorney in private practice who is interested in working with sophisticated clients? Do you want to get back to practicing law instead of dealing with administrative tasks? Have you taken a sabbatical to travel or take care of your family?&nbsp; Have you pursued other interests but still want to use your law degree and training (and earn a steady income)?</p><p>InCloudCounsel partners with attorneys to bring them steady, consistent work from some of the top companies in the world while also handling the most burdensome aspects of running a legal practice, such as business development, billing and collections, and document management.</p><p>Apply to join our growing network of top-tier lawyers now.</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "q1zQjykaQTO0t9yfubxbNQ",
+    "url": "https://weworkremotely.com/remote-jobs/laterpay-gmbh-technical-consultant-eu-region",
+    "title": "LaterPay GmbH: Technical Consultant (EU Region)",
+    "tags": [
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:javascript/frontend/2",
+      "DBG_TECH1:k/t/w:javascript/nodejs/2",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:reactjs/frontend/8",
+      "DBG_TECH1:k/t/w:wordpress/php/10",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=2, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=15, embedded=0, frontend=13}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TECH1/php",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend",
+      "php"
+    ],
+    "hiringOrganization": {
+      "name": "LaterPay GmbH",
+      "sameAs": "https://www.laterpay.net/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2018 9:22:37 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Technical Consultant (EU Region)</h2><span>Company: LaterPay GmbH<br></span><span>Headquarters: Munich, Germany<br></span><span>https://www.laterpay.net/<br><br></span><div><div><b>What we're looking for</b></div><div><span>In this role, you will be the technical contact for many of our potential customers in the publishing, video and enterprise SaaS sectors in the EU region. You will work with our product and engineering teams to solve technical challenges and integration questions, assist the sales team in replying to requests for information and acquire broad knowledge about our product and the different integration paths - from WordPress, to our REST-y API to our most popular option, the JavaScript &quot;Connector&quot;.</span><b><br></b></div><div></div><div><span><br></span></div><div><span><b>Your tasks</b></span></div><ul><li>Architecting effective solutions for our customers’ requests and integration hurdles.<br>This can include:<br>* Debugging technical issues<br>* Testing the product from both a functional and technical perspective<br>* Ensuring integration functions as per customers’ requirements and expectations</li><li>Working closely with sales team in the presales process, including:<br>* Responding to requests for information<br>* Assisting with presentations<br>* Providing answers to technical questions.&nbsp; &nbsp;</li><li>Writing clear and concise documentation about technical issues and explaining technical details to non-technical people</li><li>Collaborating with our Engineering and Product teams to represent customer requirements and needs</li></ul><div><br></div><div><b></b></div><div><b>About you</b></div><ul><li>Fluent in both <b>German and English</b> (written and spoken)<br></li><li>Technical pre-sales consulting or technical sales experience<br>* Understanding (and healthy skepticism) of sales processes and best practices<br>* Ability to navigate the sales process within organizations ranging from small startups to large multinationals<br>* Comfortable in a customer-facing position, but also enjoy direct cooperation with software engineers and engineering managers, as well as a user-oriented product team</li><li>Well-versed in modern software development technologies and practices<br>* Solid understanding of &quot;the modern full web stack&quot; to be able to talk to our customers about how LaterPay works, covering topics such as: HTML and CSS, Manipulating the DOM with JavaScript, RESTful Web Services, HTTP requests / methods, XHR, Basic PHP in WordPress &amp; its templating, plugin ecosystem<br>* Ideally, you’ve also had some exposure to: React &amp; Redux (because that’s what we use), Version control using Git, Software development in a team using CI</li><li>Self-motivated and able to drive results without too much management</li><li>Highly organized, able to handle many threads at once, and keep things moving - you’ll be interacting with many different customers on any given day</li><li>Entrepreneurial thinking is a big bonus! Our success is your success, you strive to support the sales team and help maintain alignment with the market reality and needs</li></ul><div><br></div><div><b>About us</b></div><div><span>We at LaterPay are proud to be at the forefront of the digital awakening by pushing for an Internet of choice that empowers both content providers and consumers. We are part of the solution by providing essential tools for the Internet of choice. Our mission is to make it super easy and convenient for users to access content. Providing a running tab for all digital purchases across websites, currencies and platforms, and eliminating upfront registration and payment, is just the beginning.</span></div><div><br></div><div><span>In our process, when a visitor reaches paid content or services, instead of having to complete a form and hand over a credit card, the user simply agrees to pay later and gets instant access to content. We track the user's content consumption, and after a monetary threshold is reached, we collect payment. By decoupling purchases from payments, LaterPay lowers the entry thresholds for users to consume digital goods. Our partners see a significant uplift in purchase conversions and simplify their billing and collections while offering a better user experience.</span><b><br></b></div><div></div><div><span><br></span></div><div><span><b>How we work</b></span></div><div>LaterPay has around 50 people spread over 12+ countries in time zones from UTC-8 to UTC+2. We’re a distributed team, though we have offices in Munich (DE) and New York (US).</div><div><br></div><div><span>We care more about the things you do than your presence at a chair at a desk at 9am every day. most of us work Monday - Friday from 9ish UTC to 6ish UTC. For this role, you will also be working closely with merchants operating in the EU.</span><span><b><br></b></span></div><div></div><div><span><br></span></div><div><span><b>Apply</b></span></div><div>If this sounds interesting, please apply here:&nbsp;https://laterpay-jobs.personio.de/job/89086&nbsp;</div><div><br></div><ul><li>Please submit your CV (English), and<br></li><li>in one or two paragraphs, tell us more about how your skill set makes you a great fit for this position (German).&nbsp;<br><br></li></ul><div><b>Deadline</b></div><div>We will be accepting applications until October 11th, 2018.</div><div><br></div><div><b>Pay</b></div><div><span>€45,000 - 60,000 / year</span></div><div><br></div><div><a href='https://laterpay-jobs.personio.de/job/89086#apply' rel='nofollow'><span></span></a></div><div><br></div></div><div><h4>Apply for this position</h4><p>Apply on our careers site: <a href='https://laterpay-jobs.personio.de/job/89086' rel='nofollow'>https://laterpay-jobs.personio.de/job/89086</a></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "Ne9bKOZITG2FKc24f0pYZw",
+    "url": "http://jobmote.com/jobs/26221-sap-pm-fiori-consultant-asap-full-time-95-remote",
+    "title": "SAP PM Fiori Consultant - ASAP - Full Time - 95% REMOTE",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Red - The Global SAP Solutions Provider",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 27, 2018 9:20:42 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>For our client we are looking on an exclusive basis for a SAP PM Plant Maintenance Consultant with Fiori experience. </p><p>Ideally, you have gained Fiori experience in PM. </p><p>After a short on-boarding in South Germany, this full time project can be performed 99% remotely.</p><p>Tasks:<br>* In tight collaboration with business process experts, create a technical evaluation how diverse SAP Addons or Non-SAP applications can support the production equipment maintenance and fit to the IT landscape<br>* Align E2E solution approach with IT architecture team<br>* IT consulting of business process experts in development of shortlist and recommendation (incl. costs, resources and time-line estimation) for Steering Committee<br>* Prepare final presentation for Steering Committee<br>* After Steering Committee decision, hand over the results to 'design and implementation team'<br>* Support in preparing appropriate Fiori apps and features (eg search) on Fiori Launchpad to provide a user experience that best fits to the requirements<br>* Support that the Fiori apps and features also work on mobile devices</p><p>Required Skills:<br>* SAP PM Plant Maintenance Consulting<br>* Fiori (ideally in PM)<br>* Nice to have: document management SAP DMS (Document Management System), Mobile Solutions and mobile device management</p><p>Conditions:<br>* Start: ASAP, mid of October 2018 the latest<br>* Duration: 5months + (+ chance of extension)<br>* Workload: 4-5 Days/Week<br>* Location: 95% REMOTE with some trips to South Germany eg for the on-boarding<br>* Language: English</p><p>This vacancy is exclusively with Red! Interviews with decision shortly after can be coordinated on short notice. </p><p>If you are interested or if you can recommend someone please contact us.</p><p></p></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "I-SJ8zrHT4iuaG8AEuaD9g",
     "url": "https://remote.co/job/disaster-relief-calls-inbound-representative/",
     "title": "Disaster Relief Calls, Inbound Representative",
