json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,55 @@
 {
  "items": [
   {
+    "id": "zrAYqCbgQF-aiRbTB24rKg",
+    "url": "http://workinstartups.com/job-board/job/73470/telesales-representative-at-love-the-idea/",
+    "title": "Telesales Representative",
+    "tags": [
+      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
+      "DBG:surround``work 2W from 2W home 4W OR(staff,cowork,offic,posit)",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/America/East"
+    ],
+    "tagsNames1": [
+      "US East time zone",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "Love the Idea",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 28, 2018 2:38:29 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "TITLE/JOB POSITION: Telesales Representative<br /><br />ABOUT US:<br />Love The Idea is a London based development startup company that has been running for the past 9 years. We design, develop, market professional web and mobile development services. We are a team of experienced  developers, designer and project managers.<br /><br />JOB DESCRIPTION:<br />Part-time job for INTERNS/JUNIOR/GRADUATES under tech industry, will be paid on an hourly rate.<br />This position include some telephone and online chat interactions with various clients in different industries.<br />Please note: This is a work-from-home position for UK based applicants only. No travel is required.<br /><br />WHAT WE ARE LOOKING FOR:<br /><br />A remote UK based Intern/Junior/Fresh IT graduate;<br />Must be knowledgeable of tech jargons or web and app development;<br />Strong communication skills;<br />Passion for technology and how technology can help companies and individuals to progress;<br />Positive, proactive, friendly & professional.<br /><br />RESPONSIBILITIES:<br /><br />Manage and handle calls for our client/s.<br />You have to be available immediately and be proficient.<br />Must have a quiet working environment.<br />Personal computer, phone with remote networking capability that can be dedicated for CSR work<br />Good manners and has strategic and critical thinking when handling calls.<br />Available to work Eastern Time Zone hours<br />Available to work some evenings and weekends<br /><br />LANGUAGES:<br /><br /> English: Native<br /><br />Please answer the questions along with your CV:<br />Why should we hire you?<br />What particular skills do you acquire for the job?<br />Rate yourself from 1-10, 1 being the lowest. How well do you know web and app development?",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "hPCE1aSTQOmRTdgPhlku_w",
     "url": "http://jobmote.com/jobs/26378-iam-consultant-remote-working",
     "title": "IAM Consultant - Remote working",
