json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,101 @@
 {
  "items": [
   {
+    "id": "SrMKVg4mStmYH-PzyzZDaw",
+    "url": "https://remote.co/job/virtual-assistant-belay-15/",
+    "title": "Virtual Assistant",
+    "tags": [
+      "DBG:surround``flexibl 3W work 2W from 2W home",
+      "DBG:surround``remot 3N OR(options, avail, allow) NOT encourag",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "apple"
+    ],
+    "hiringOrganization": {
+      "name": "BELAY",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 30, 2018 3:50:32 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Virtual Assistant at <span>BELAY</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span></div><div>            <h4><strong>VIRTUAL ASSISTANT</strong></h4><p>Want to enjoy the flexibility of working from home with the leading virtual assistant provider in the United States? BELAY is a top-ranked virtual solutions company looking for highly-motivated virtual assistants, who have a passion for serving others. Come join us and experience the freedom of working virtually with the ideal work/life balance to match your professional pursuit.</p><h4><strong>WHY BELAY?</strong></h4><ul><li>Entrepreneur Magazine&nbsp;ranked BELAY the number one in Best Culture for Small-Sized Companies and the Top Company Culture for a Small Business Award for having a “productive” and “high-performance” culture</li><li>Recognized by&nbsp;Inc. Magazine&nbsp;as one of the Fastest Growing Companies in the United States in 2015</li><li>Received the ‘When Work Works’ Award from the Society of Human Resource Management, recognizing “companies that offer effective and flexible workplace strategies, empowering their organization to rise above the competition.”</li><li>Atlanta Business Chronicle&nbsp;(BELAY’s headquarters) named BELAY one of the “Best Places to Work”</li></ul><h4><strong>ARE YOU LOOKING FOR:</strong></h4><ul><li>A remote position where you serve as your client’s indispensable partner?</li><li>An opportunity to use your talents and skills to build your client’s success?</li><li>A community of contractors to share ideas and best practices?</li><li>Regular support and guidance from your BELAY team?</li></ul><h4><strong>Essential Functions/Responsibilities:</strong></h4><ul><li>Maintain executive’s appointments/calendar</li><li>Email management and organization</li><li>Prepare presentations and/or spreadsheets</li><li>Social Media management</li><li>Create structure/workflow/processes</li><li>Research technologies and make recommendations</li><li>CRM administration: updates and data entry</li><li>Make travel arrangements, such as booking flights, cars, and making hotel and restaurant reservations.</li><li>Event planning and coordination</li><li>Project Assistance/Coordination</li></ul><h4><strong>Key Attributes:</strong></h4><ul><li>Detail-oriented, organized and efficient</li><li>Extremely self-motivated with strong time management</li><li>Proactive, pragmatic, and resourceful problem solver</li><li>Trustworthy and reliable</li><li>Friendly and professional communicator</li><li>Ability to manage multiple priorities and meet or beat deadlines with no errors</li><li>Tech Savvy and quick to learn new concepts</li><li>Ability to anticipate the needs of others coupled with a strong desire to serve</li><li>Adaptable</li></ul><h4><strong>Key Qualifications:</strong></h4><ul><li>Bachelor’s Degree and experience working remotely preferred</li><li>Available daily (Mon-Fri) during business hours, and able to dedicate at least 20 hour/week</li><li>At least five years’ experience in an administrative support role</li><li>In-home office setup including: Mac or PC Computer (including webcam) with minimum 1.0ghz dual core processor, 8gb, and the most recent version of MS Office installed (all programs; Word, Excel, Outlook, PowerPoint)</li><li>A fast and reliable internet connection</li><li>Smartphone with email capabilities</li><li>Designated professional, quiet space</li></ul><h4><strong>NOTE:</strong></h4><ul><li>This is a 1099 Contractor Role</li><li>All applicants may be subject to a background check prior to an offer of employment or contract being issued</li><li>BELAY participates in E-Verify</li></ul>        </div><div>        <a href='https://belay.applytojob.com/apply/H8fkSHmq99/Virtual-Assistant' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "yniwvAzlSZmrhJX6CyNlkw",
+    "url": "https://weworkremotely.com/remote-jobs/x-team-traveling-videographer",
+    "title": "X-Team: Traveling Videographer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "X-Team",
+      "sameAs": "http://x-team.com"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 30, 2018 9:29:45 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Traveling Videographer</h2><span>Company: X-Team<br></span><span>Headquarters: Remote<br></span><span>http://x-team.com<br><br></span><div><div><b>About X-Team</b></div><div><b><br></b></div><div>X-Team is an international company founded in Melbourne, Australia, that helps companies scale their development teams by providing them with extraordinary teams of developers from around the world.</div><div><br></div><div><b>We are 100% remote and believe in building a world where developers can have access to an environment of growth and incredible opportunities regardless of where they live.</b></div><div><br></div><div>We are also a community of people dedicated to unleashing our potential. We’ve fostered a unique, active lifestyle and culture around this idea that continues to attract thousands of developers to apply every day.</div><div><br></div><div>We proactively support our developers, fund their learning and growth, connect them in roaming hacker housesaround the world, and give them a remote environment that motivates and inspires them on a daily basis. While other companies merely place and drop their talent, we provide unified teams of developers centered around the same beliefs, values, and lifestyle.&nbsp;</div><div><br></div><div>We're uniquely situated to help shape how companies grow their businesses in the digital age and aid them in being able to do so properly with the right people. We work with big brands like Riot Games, Fox Broadcasting, Kaplan Inc., Coinbase, Google, Twitter and more…</div><div><br></div><div><b>About The Role:</b></div><ul><li>This is a dream role for an up-and-coming travel videographer. Your mission is simple: travel, film and get paid to do it.</li><li>Just look at our locations shoot schedule for the next 8 months: Spain, Turkey, Argentina, Poland, Philippines, Italy, South Africa, Japan, Costa Rica, and Brazil.</li><li>Your role is to travel to our X-Outposts (http://x-outpost.com) and events and capture the X-Team experience through footage and photos. There is at least 1 event per month to travel to and shoot, and plenty of video campaigns you can be creating/editing utilizing the footage you collect.</li><li>Examples of videos you'll make (we look to you to improve our current video quality):&nbsp;https://www.youtube.com/watch?v=yrq9O8nJfkc&nbsp;https://www.youtube.com/watch?v=u6bLNedJPo8</li><li>You'll integrate with our X-Outpost groups, oftentimes also living with them and being a natural part of their social gatherings to help set people at ease as you capture footage of them living the digital nomad lifestyle.</li><li>You will also do the editing for video recaps, and create iterations and publish them to Instagram, Facebook, etc.</li><li>You'll also maintain our library of footage and photos and keep everything organized for easy access for yourself.</li></ul><div><span><br></span></div><div><b>The Pay:</b></div><ul><li>This role is great for someone who wants to start building a portfolio in travel videography and social media marketing.</li><li>You'll be given $1,000 per month, with your travel costs covered, including various fun activities you'll do with our groups. Within any given month, you'll need to travel to up to 2 video shoots, and edit up to 3 videos.</li><li>You'll also be given an Unleash+ membership, gaining you access to spend up to $2,500 on various items and activities that help energize and motivate you (gym, games, fresh produce, etc.).<br></li><li>Photography equipment, excluding drones, is not covered, however you can utilize Unleash+ for $100/mo in free photography gear. You'll need to have a DSLR of your own to use.</li></ul><div><br></div><div><b>About You:</b></div><ul><li>Experience with videography and photography, capturing events of any size. (and some past work to show for it)</li><li>Experience with video editing software (Premiere, Final Cut, etc. -- your choice).</li><li>Experience using a drone to capture footage.</li><li>Fun, outgoing personality that easily integrates with a group of people.</li><li>Passionate about travel, being a digital nomad and creating awesome videos that blow people away.</li><li>Comfortable living like a backpacker or living in a hostel when needed.</li></ul><div><span><br></span></div><div><b>Nice to have:</b><br></div><div></div><div></div><ul><li>Experience with working remotely.</li><li>After Effects experience.</li></ul><div><span><br></span></div><div><b>Personal:</b><br></div><div></div><div></div><ul><li>Independent, self-motivated</li><li>Strong spoken English</li><li>Proven track record of always learning and growing</li><li>Proactive attitude</li><li>Possess a spirit of generosity</li></ul><div><br></div><div><b>Perks:</b></div><ul><li>Work from anywhere as part of a community of digital nomads.</li><li>Join our vibrant community, filled with opportunities to learn new skills together in study groups, join clubs (photography, gaming, etc.) and get free games/conferences/courses/massages/etc., charitable fundraisers, fitness &amp; yoga programs (+gym membership), etc. This is the community to be in if you're a remote developer.</li><li>We’ll provide up to $2,500 in funding for your learning and growth through our Unleash+ program, which provides opportunities to unleash your potential through initiatives that help you grow as a developer and explore your passions more each day.&nbsp;</li></ul></div><div><h4>Apply for this position</h4><p>Apply here: <a href='http://bit.ly/2QjBUi9' rel='nofollow'>http://bit.ly/2QjBUi9</a></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "zrAYqCbgQF-aiRbTB24rKg",
     "url": "http://workinstartups.com/job-board/job/73470/telesales-representative-at-love-the-idea/",
     "title": "Telesales Representative",
